--- a/profiles/templates/profiles/global-base-ui/sidebar_menu.html
+++ b/profiles/templates/profiles/global-base-ui/sidebar_menu.html
@@ -25,7 +25,7 @@
             {% elif request.session.session_user_position == "Handler"%}
             <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Homepage</a>
             <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
-            <a class="item" href="{% url 'unitmanagement:request_form'%}"><i class="folder open icon"></i>Unit Management</a>
+            <a class="item" href="{% url 'unitmanagement:health_history'%}"><i class="folder open icon"></i>Unit Management</a>
             
             {% else %}
             <a class="item" href="{% url 'profiles:team_leader_dashboard'%}"><i class="chart line icon"></i>Homepage</a>
