--- a/profiles/templates/profiles/handler_dashboard.html
+++ b/profiles/templates/profiles/handler_dashboard.html
@@ -3,5 +3,8 @@
 {% block dashboard %}
 <div class="container fluid">
   <h1>dashboard</h1>
+  <p>k9 performance</p>
+  <p>Request = on leave, medicine, phyx, vaccine, equipment</p>
+  <p>refresher</p>
 </div>
 {% endblock%}
