--- a/unitmanagement/templates/unitmanagement/reproductive_details.html
+++ b/unitmanagement/templates/unitmanagement/reproductive_details.html
@@ -17,8 +17,8 @@
                 <td>{{data.name}}</td>
                 <th>Serial Number</th>
                 <td>{{data.serial_number}}</td>
-                <th>Microchip</th>
-                <td>{{data.microchip}}</td>
+                <th>Capability</th>
+                <td>{{data.capability}}</td>
             </tr>
             <tr>
                 <th>Breed</th>
