--- a/profiles/templates/profiles/global-base-ui/sidebar_menu.html
+++ b/profiles/templates/profiles/global-base-ui/sidebar_menu.html
@@ -15,7 +15,7 @@
             class="folder open icon"></i>Unit Management</a>
             
             {% elif request.session.session_user_position == "Veterinarian" %}
-            <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Homepage</a>
+            <a class="item" href="{% url 'profiles:vet_dashboard'%}"><i class="chart line icon"></i>Homepage</a>
             <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
             <a class="item" href="{% url 'planningandacquiring:K9_list'%}"><i class="clipboard list icon"></i>Planning and Acquiring</a>
             <a class="item" href="{% url 'inventory:medicine_inventory_list'%}"><i class="warehouse icon"></i>Inventory</a>
@@ -23,9 +23,9 @@
             <a class="item" href="{% url 'training:adoption_list'%}"><i class="handshake icon"></i>Adoption</a>
             
             {% elif request.session.session_user_position == "Handler"%}
-            <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Homepage</a>
+            <a class="item" href="{% url 'profiles:handler_dashboard'%}"><i class="chart line icon"></i>Homepage</a>
             <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
-            <a class="item" href="{% url 'unitmanagement:health_history'%}"><i class="folder open icon"></i>Unit Management</a>
+            <a class="item" href="{% url 'unitmanagement:health_history_handler'%}"><i class="folder open icon"></i>Unit Management</a>
             
             {% else %}
             <a class="item" href="{% url 'profiles:team_leader_dashboard'%}"><i class="chart line icon"></i>Homepage</a>
