--- a/profiles/templates/profiles/login.html
+++ b/profiles/templates/profiles/login.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>K9 Coast Guard</title>
 
-    <link rel="stylesheet" href="{% static 'semantic/semantic.min.css' %}">
+    <link rel="stylesheet" href="{% static 'Semantic-UI/semantic.min.css' %}">
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'Semantic-UI/semantic.min.js' %}"></script>
     <!-- <script src="{% static 'custome/custom_jquery.js' %}"></script> -->
