--- a/unitmanagement/templates/unitmanagement/k9_sick_details.html
+++ b/unitmanagement/templates/unitmanagement/k9_sick_details.html
@@ -9,33 +9,206 @@
         {% endfor %}
     {% endif %}
 </div>
-<div class="ui raised segment">
-    <table class="ui collapse table">
-        <thead>
-            <tr>
-                <th>K9</th>
-                <td>{{data.k9}}</td>
-                <th>Date</th>
-                <td>{{data.date}}</td>
-            </tr>
-            <tr>
-                <th>Remarks</th>
-                <td class="nine wide">{{data.description}}</td>
-                <th>Reported by:</th>
-                <td>{{data.reported_by}}</td>
-            </tr>
-        </thead>
-    </table>
-    <br>
-    <div class="ui grid">
-        {% for image in image%}
-            <div class="five wide column center aligned">
-                <img src="{{image.image.url}}" alt="" style="position:relative;max-width: 300px;">
+
+{% if user.position == 'Handler' %}
+    {% if th %}
+        
+    <div class="ui raised segment">
+            <table class="ui collapse green celled table">
+                <thead>
+                    <tr>
+                        <th class="two wide">K9</th>
+                        <td>{{th.health.dog}}</td>
+                        <th class="two wide">Reported by:</th>
+                        <td>{{th.health.incident_id.reported_by}}</td>
+                        <th class="two wide">Reported on:</th>
+                        <td>{{th.health.incident_id.date}}</td>
+                    </tr>
+                    <tr>
+                        <th>Veterinarian:</th>
+                        <td>{{th.health.veterinary}}</td>
+                        <th>Prescribed on:</th>
+                        <td>{{th.health.date}}</td>
+                        <th>Duration:</th>
+                        <td>{{th.health.duration}}</td>
+                    </tr>
+                </thead>
+            </table>
+            <div class="ui two equal width grid">
+                <div class="column">
+                        <table class="ui celled table">
+                                <thead>
+                                    <tr>
+                                        <th class="two wide">Problem:</th>
+                                        <td class="fourteen wide">{{th.health.problem}}</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Treatment:</th>
+                                        <td>{{th.health.treatment}}</td>
+                                    </tr>
+                                </thead>
+                            </table>
+                </div>
+                <div class="column">
+                        <img src="{{image.image.url}}" alt="" style="position:relative;max-width: 300px;">
+                </div>
             </div>
-        {%endfor%}
+        </div>
+
+      
+        <table class="ui inverted green celled table" id = 'tabledata'>
+            <thead>
+                <th>Medicine</th>
+                <th>Quantity</th>
+                <th>Time of Day</th>
+                <th>Duration (Days)</th>  
+            </thead>
+            <tbody>
+                    {% for data in h%}
+                <tr>
+                    <td>{{data.medicine}}</td>
+                    <td>{{data.quantity}}</td>
+                    <td>{{data.time_of_day}}</td>
+                    <td>{{data.duration}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    {% else %}
+    <div class="ui info message">
+            <div class="content">
+                <div class="header">
+                   Please wait for a reply from the Vet.
+                </div>
+            </div>
+        </div>
+    {% endif %}
+    <div class="ui raised segment">
+            {% if th %}
+                <h2>Follow-Up</h2>
+            {% endif %}
+        <table class="ui collapse table">
+            <thead>
+                <tr>
+                    <th>K9</th>
+                    <td>{{data.k9}}</td>
+                    <th>Date</th>
+                    <td>{{data.date}}</td>
+                </tr>
+                <tr>
+                    <th>Remarks</th>
+                    <td class="nine wide">{{data.description}}</td>
+                    <th>Reported by:</th>
+                    <td>{{data.reported_by}}</td>
+                </tr>
+            </thead>
+        </table>
+        <br>
+        <div class="ui grid">
+            {% for image in image%}
+                <div class="five wide column center aligned">
+                    <img src="{{image.image.url}}" alt="" style="position:relative;max-width: 300px;">
+                </div>
+            {%endfor%}
+        </div>
     </div>
-</div>
-{% if user.position == 'Veterinarian' %}
+
+{% elif user.position == 'Veterinarian' %}
+{% if th %}
+        
+<div class="ui raised segment">
+        <table class="ui collapse green celled table">
+            <thead>
+                <tr>
+                    <th class="two wide">K9</th>
+                    <td>{{th.health.dog}}</td>
+                    <th class="two wide">Reported by:</th>
+                    <td>{{th.health.incident_id.reported_by}}</td>
+                    <th class="two wide">Reported on:</th>
+                    <td>{{th.health.incident_id.date}}</td>
+                </tr>
+                <tr>
+                    <th>Veterinarian:</th>
+                    <td>{{th.health.veterinary}}</td>
+                    <th>Prescribed on:</th>
+                    <td>{{th.health.date}}</td>
+                    <th>Duration:</th>
+                    <td>{{th.health.duration}}</td>
+                </tr>
+            </thead>
+        </table>
+        <div class="ui two equal width grid">
+            <div class="column">
+                    <table class="ui celled table">
+                            <thead>
+                                <tr>
+                                    <th class="two wide">Problem:</th>
+                                    <td class="fourteen wide">{{th.health.problem}}</td>
+                                </tr>
+                                <tr>
+                                    <th>Treatment:</th>
+                                    <td>{{th.health.treatment}}</td>
+                                </tr>
+                            </thead>
+                        </table>
+            </div>
+            <div class="column">
+                    <img src="{{image.image.url}}" alt="" style="position:relative;max-width: 300px;">
+            </div>
+        </div>
+    </div>
+
+  
+    <table class="ui inverted green celled table" id = 'tabledata'>
+        <thead>
+            <th>Medicine</th>
+            <th>Quantity</th>
+            <th>Time of Day</th>
+            <th>Duration (Days)</th>  
+        </thead>
+        <tbody>
+                {% for data in h%}
+            <tr>
+                <td>{{data.medicine}}</td>
+                <td>{{data.quantity}}</td>
+                <td>{{data.time_of_day}}</td>
+                <td>{{data.duration}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+   
+{% endif %}
+<div class="ui raised segment">
+        {% if th %}
+        <h2>Follow-Up</h2>
+        {% endif %}
+        <table class="ui collapse table">
+            <thead>
+                <tr>
+                    <th>K9</th>
+                    <td>{{data.k9}}</td>
+                    <th>Date</th>
+                    <td>{{data.date}}</td>
+                </tr>
+                <tr>
+                    <th>Remarks</th>
+                    <td class="nine wide">{{data.description}}</td>
+                    <th>Reported by:</th>
+                    <td>{{data.reported_by}}</td>
+                </tr>
+            </thead>
+        </table>
+        <br>
+        <div class="ui grid">
+            {% for image in image%}
+                <div class="five wide column center aligned">
+                    <img src="{{image.image.url}}" alt="" style="position:relative;max-width: 300px;">
+                </div>
+            {%endfor%}
+        </div>
+    </div>
 <div class="ui inverted segment">
     <form class="ui inverted form" method="POST" id="myForm" enctype="multipart/form-data">
         {% csrf_token %}
@@ -52,8 +225,14 @@
                 <label>Prescription Image (if any)</label>
                 {{form.image}}
             </div>
-            <div class="field"></div>
-            <div class="field"></div>
+            <div class="field">
+                <label>Follow Up?</label>
+                {{form.follow_up}}
+            </div>
+            <div class="field">
+                <label>Follow Date</label>
+                {{form.follow_up_date}}
+            </div>
         </div>
         <table>
             <tbody>
@@ -81,7 +260,7 @@
         {{formset.management_form}}
     </form>
 </div>
-{% endif %}
+
 <script type="text/javascript">
 
     $(document).ready(function() {
@@ -92,7 +271,22 @@
                 prefix: '{{ formset.prefix }}'
             });            
         })
+        console.log('yes')
+        
+        $('#id_follow_up_date').prop('disabled', 'disabled');
+
+        $( "#id_follow_up" ).change(function() {
+          
+            if ($("input[name='follow_up']:checked").val() == 'True'){
+                $('#id_follow_up_date').prop('disabled', false);
+            }else{
+                $('#id_follow_up_date').prop('disabled', 'disabled');
+            }
+        });
     });
 
 </script>
- {% endblock %}
+
+{% endif %}
+
+{% endblock %}
