training and breed
pa try po nung training, for some reason di nag uupdate yung db ko di ko ma try

--- a/profiles/templates/profiles/sidebar_pa.html
+++ b/profiles/templates/profiles/sidebar_pa.html
@@ -43,6 +43,9 @@
                                  <a href="{% url 'planningandacquiring:budget_list'%}" class="item">Budgeting
                                         <i class="money bill alternate outline icon"></i>
                                 </a>
+                                <a href="{% url 'planningandacquiring:breed_list'%}" class="item">Breed List
+                                        <i class="money bill alternate outline icon"></i>
+                                </a>
 
                                 {% endif %}
 
