--- a/deployment/templates/deployment/index.html
+++ b/deployment/templates/deployment/index.html
@@ -3,6 +3,6 @@
 {% block content %}
 <div class="ui fluid container">
         <h1>Deployment</h1>
-
+        <p>{{d.port_time}}</p>
 </div>
 {% endblock%}
