--- a/profiles/templates/profiles/team_leader_dashboard.html
+++ b/profiles/templates/profiles/team_leader_dashboard.html
@@ -53,7 +53,7 @@
                             {{tdd_count}}
                           </div>
                           <div class="label">
-                            FOU's
+                            Field Officer Units
                           </div>
                         </div>  
                     </div>
