--- a/profiles/templates/profiles/vet_dashboard.html
+++ b/profiles/templates/profiles/vet_dashboard.html
@@ -52,6 +52,20 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="column">
+                                <div class="ui raised center aligned segment">
+                                    <div class="card">
+                                        <div class="content">
+                                            <i class="huge exclamation black icon">{{incident}}</i>
+                                        </div>
+                                        <div class="extra content">
+                                            <strong>
+                                                <a href="#">PENDING K9 INCIDENTS</a>
+                                            </strong>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                     </div>            
                 </div>
                
