--- a/unitmanagement/templates/unitmanagement/choose_handler_list.html
+++ b/unitmanagement/templates/unitmanagement/choose_handler_list.html
@@ -11,39 +11,29 @@
 </div>
 
 <div class="ui segment">
-   <div class='ui grid'>
+   <div class='ui centered grid'>
         <div class='two column row'>
-            <div class='column'>
-                <table class="ui celled orange table">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <td>{{k9.name}}</td>
-                        </tr>
-                        <tr>
-                            <th>Age</th>
-                            <td>{{k9.age}}</td>
-                        </tr>
-                        <tr>
-                            <th>Sex</th>
-                            <td>{{k9.sex}}</td>
-                        </tr>
-                        <tr>
-                            <th>Breed</th>
-                            <td>{{k9.breed}}</td>
-                        </tr>
-                        <tr>
-                            <th>Capability</th>
-                            <td>{{k9.capability}}</td>
-                        </tr>
-                        </tr>
-                    </thead>
-                </table>
-            </div>
-            <div class='column'>
+            <div class='column center aligned'>
+               
+            <div class="image">
                 <center>
-                    <img src="{{k9.image.url}}" alt="" width="280">
+                    <img src="{{k9.image.url}}" style="max-width: 280px;">
                 </center>
+                    
+            </div>
+            <div class="content">
+                    <a class="header">{{k9}}</a>
+                    <div class="meta">
+                        <strong>Age: {{k9.age}}</strong><br>
+                        <strong>Breed: {{k9.breed}}</strong><br>
+                        <strong>Sex: {{k9.sex}}</strong>
+                    </div>
+                </div>
+                <div class="extra content">
+                    <h3>{{k9.capability}}</h3>
+                </div>
+            </div>
+            <div class='column center aligned' id='id_handler_data'> 
             </div>
 
         </div>
@@ -57,12 +47,15 @@
     <form class = "ui fluid form" method="POST">
         {% csrf_token %}
         <div class="ui horizontal segments">
-            <div class="ui segment" style="width:5%">
+            <div class="ui segment">
                 <table class="ui celled inverted orange table" id = 'tabledata'>
                     <thead>
                         <th class="three wide"></th>
                         <th>Name</th>
-                        <th class="three wide">K9 {{k9.capability}} Handled</th>
+                        <th class="three wide">EDD</th>
+                        <th>NDD</th>
+                        <th>SAR</th>
+                        <th>Failed</th>
                     </thead>
                     <tbody>
                         {% for a in form.handler %}
@@ -70,7 +63,10 @@
                         <tr>
                             <td class="center aligned">{{a.tag}}</td>
                             <td>{{a.choice_label}}</td>
-                            <td>{{g}}</td>
+                            <td>{{g.0}}</td>
+                            <td>{{g.1}}</td>
+                            <td>{{g.2}}</td>
+                            <td>{{g.3}}</td>
                         </tr>
                         {%endif%}{% endfor %}
                         {% endfor %}
@@ -78,9 +74,6 @@
                 </table>
             </div>
         
-            <div class="ui segment" id='id_handler_data' style="width:5%">
-                
-            </div>
         </div>
 
         <div class="ui center aligned basic segment" style="padding: 0px;">
